[tool.poetry]
name = "trafficflow"
version = "0.1.0"
description = ""
authors = ["dani2442 <daniel.l.m.2442.123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
jaxlib = "^0.4.28"
jax = "^0.4.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
